[package]
name = "fujisaki_ringsig"
version = "0.0.3"
authors = ["Michael Rosenberg <micro@fastmail.com>"]
license = "MIT OR Apache-2.0"

description = "Fujisaki-Suzuki Ring Signatures in Rust"
keywords = ["ring", "signature", "crypto", "cryptography"]
repository = "https://github.com/rozbb/fujisaki-ringsig"
documentation = "https://docs.rs/fujisaki_ringsig"

[dependencies]
blake2 = "0.9"
curve25519-dalek = "3.0"
digest = "0.9" # same as blake2
generic-array = "0.9"
rand_core = { version = "0.5", default-features = false } # same as curve25519-dalek

[dev-dependencies]
rand = "0.8"
